--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -5,7 +5,7 @@ root {
 body {
     font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
     font-size: 12px;
-    background-image: url(/resources/images/background/default1.jpg);
+    background-image: url('../images/background/default1.jpg');
     background-size: 100%;
 }
 
